[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-rag"
version = "0.1.0"
description = "A dependency-light Slay the Spire JAR fact extractor and RAG CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["rich>=13"]

[project.scripts]
sts-rag = "sts_rag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sts_rag*"]

